# simple-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: simple_scraper.py
src/simple_scraper/: __init__.py  element.py  exceptions.py  scraper.py
