[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-scraper"
description = "Scraping websites with simple code."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Keisuke Magara", email = "Keisuke-Magara.dev@outlook.com"}
]
keywords = ["scraping", "web scraping", "web", "scraper"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.7"
dynamic = ["version", "dependencies"]

[project.urls]
repository = "https://github.com/Keisuke-Magara/simple-scraper"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "src/simple_scraper/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"