[metadata]
name = simple-scraper
version = 0.9.0
author = Keisuke Magara
description = "Get text data from web with simple code."
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url="https://github.com/Keisuke-Magara/simple-scraper"

[options]
package_dir=
    =src
packages = find:
install_requires =
    cssselect
    lxml
    requests

[options.packages.find]
where=src

